--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/devgar/gitoct#readme",
   "dependencies": {
     "commander": "^2.9.0",
-    "github": "^9.2.0"
+    "github": "^9.2.0",
+    "inquirer": "^3.0.6"
   }
 }
