--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
   },
   "homepage": "https://github.com/devgar/gitoct#readme",
   "dependencies": {
-    "commander": "^2.9.0",
     "github": "^9.2.0",
-    "inquirer": "^3.0.6"
+    "inquirer": "^3.0.6",
+    "yargs": "^7.0.2"
   }
 }
