--- a/package.json
+++ b/package.json
@@ -3,22 +3,24 @@
   "version": "0.0.0",
   "description": "A simple remote manager for github an other services",
   "main": "index.js",
+  "bin": "./index.js",
   "scripts": {
     "test": "node index.js test"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/devgar/gitoct.git"
+    "url": "git+https://github.com/devgar/remora.git"
   },
   "keywords": [
+    "github",
     "git"
   ],
   "author": "Edgar Albalate <dev.gardo@gmail.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/devgar/gitoct/issues"
+    "url": "https://github.com/devgar/remora/issues"
   },
-  "homepage": "https://github.com/devgar/gitoct#readme",
+  "homepage": "https://github.com/devgar/remora#readme",
   "dependencies": {
     "github": "^9.2.0",
     "inquirer": "^3.0.6",
